# django-interactive-models

./: .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  manage.py  pyproject.toml
.github/workflows/: release.yml  testing.yml
interactive_models/: apps.py
interactive_models/management/commands/: _check_models_file.py  _parse_fields.py  _render_model.py  models.py
interactive_models/templates/: model_template.py.template
tests/: conftest.py  settings.py  test_check_models_file.py  test_model_render.py  test_models_command.py  test_parse_fields.py
